--- a/stopwatch/package.json
+++ b/stopwatch/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@capacitor/android": "^4.4.0",
     "@capacitor/cli": "^4.4.0",
     "@capacitor/core": "^4.4.0",
+    "@capacitor/local-notifications": "^4.1.2",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
